<resources>
    <string name="app_name">AttendanceTool</string>
    <string name="title_activity_student_main">Schedule</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Texts used in views -->
    <string name="main_google_login_button_text">Sign In With FPT Mail</string>
    <string name="student_main_select_term_text">Select Term:</string>
    <string name="student_main_select_course_text">Select Course:</string>
    <string name="student_main_table_column_1_text">Day</string>
    <string name="student_main_table_column_2_text">Slot</string>
    <string name="student_main_table_column_3_text">Lecturer</string>
    <string name="student_main_table_column_4_text">Class</string>
    <string name="student_main_table_column_5_text">Status</string>
    <string name="student_main_table_column_6_text">Report</string>
    <string name="teacher_select_images_from_gallery_button_text">Choose</string>
    <string name="teacher_capture_images_button_text">Capture</string>

    <!-- Colors used in views -->
    <color name="header_color">#C7412E</color>

    <!-- Credentials Info -->
    <!--<string name="google_login_server_client_id">636096643581-1s1gj0spot4b9dl3lgqe34m6piiv5mq6.apps.googleusercontent.com</string>-->
    <string name="google_login_server_client_id">681995421725-4h83cob5os9e61q2kjcousevl3qmd728.apps.googleusercontent.com</string>

    <!-- Firebase channel id -->
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <!-- Firebase channel id -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_slot">SlotActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="attendance_statistic_example"><![CDATA[
                        <b><font color=#F44336>20/30 Attended this class</font></b>
                        ]]></string>
    <string name="notification_edit_attendance_string">Edit</string>
    <string name="notification_decline_attendance_string">Decline</string>
    <string name="take_attendance_submit_images_text">Submit Images</string>
    <string name="take_attendance_submit_manual_text">Submit Manual</string>
    <string name="menu_item_logout_text">Logout</string>
</resources>
